--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
