--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "moment": "^2.29.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-chart-kit": "^6.6.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-month-year-picker": "^1.4.1",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
